tests/invalid/default_parameter_declaration_only_not_supported.wio
fn DeclOnlyEcho(value: i32 = 7) -> i32;

fn Entry() -> i32 {
    return 0;
}
